# issues

20220908-datahub-protobuf/: Makefile  README.md  docker-compose.yaml  jbang-catalog.json
20220908-datahub-protobuf/devtools/: Dockerfile
20220908-datahub-protobuf/proto/: buf.yaml
20220908-datahub-protobuf/proto/io/cloudevents/v1/: cloudevents.proto
20220908-jbang-classpath/: Dockerfile.okay
20230713-black-issue/: README.md  Taskfile.yml  badfile.py  file.py
20230713-poetry-prerelease-backdoor/: Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements-poetry.txt  requirements-toolchain.in  requirements-toolchain.txt
20230822-rdflib_dataset_query/: pyproject.toml
20230822-rdflib_dataset_query/tests/: test_query.py
20230903-pyduktape2-cython/: pyproject.toml
20230912-golang_mdns/: README.md
20240307-task_errors/: README.md  Taskfile.yml
20250130-docker_compose_rebuild/: Dockerfile.base  Taskfile.yml  idler.sh
20250207-ruff_import_format/: Taskfile.yml  pyproject.toml
20250207-ruff_import_format/example/: local.py  remote.py
20250425-ddtrace_asyncpg_patching/: .cruft.json  README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
20250425-ddtrace_asyncpg_patching/src/aucampia/issues/ddtrace_asyncpg_patching/: cli.py
20250425-ddtrace_asyncpg_patching/tests/: test_something.py
datahub-protobuf/: Makefile  README.md  buf.gen.yaml
datahub-protobuf/devtools/: Dockerfile
sunoszfscache-201509/: csdata-arcsnoop-20150921185835.txt  csdata-arcsnoop-20150921193800.txt
