[tool.poetry]
name = "example"
version = "0.0.0"
description = "Illustrate a bug"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-postgres = {version = "^1.5.2"}
sqlparse = {version = "^0.4.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
