[project]
license = "MIT-0"
name = "example"
version = "0.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "I", # isort
]
ignore = [
    "F401", # imported but unused
]
